2007-12-19  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-troubleshooting.man: Tweak "password
	verification timeout" troubleshooting.
	
2007-12-18  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Use %{version} instead of @VERSION@.
	
2007-12-14  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Fix for libfreeipmi reorg.
	
2007-12-14  Albert Chu <chu11@llnl.gov>

	Major code reorganization and code cleanup from branch
	libfreeipmi_rearch_branch.

	* configure.ac: Require automake 1.9, support long filenames.

	* config/: New directory.  Move .m4 files in this directory.

	* autogen.sh, configure.ac: Update for new config directory.

	* common/src/ipmi-sensor-api.c (system_software_type_desc):
	Removed unused array of strings.

	* common/src/ipmi-sensor-api.c: Add debugging via debug parameter.
	Use internal wrapper functions rather than library wrapper
	functions.

	* ipmi-sensors/: Adjust code for sensor-api change.

	* pef-config/: Remove linking to libsensor.la.

	* configure.ac, freeipmi.spec.in, common/src/err-wrappers.h,
	common/src/fiid-wrappers.h, common/src/udm-err-wrappers.h,
	common/src/udm-fiid-wrappers.h: Remove --enable-syslog support.

	* common/src/err-wrappers.h, common/src/fiid-wrappers.h,
	common/src/udm-err-wrappers.h, common/src/udm-fiid-wrappers.h:
	Update error logging routines with more details.  Add additional
	error logging routines.  Fix several logging bugs.  Remove unused
	wrappers.

	* libfreeipmi/src/ipmi-kcs-aci.c,
	libfreeipmi/src/ipmi-openipmi-api.c,
	libfreeipmi/src/ipmi-ssif-api.c: Use error logging routines.

	* libfreeipmi/include/freeipmi/ipmi-locate.h,
	libfreeipmi/src/ipmi-locate.c,
	libfreeipmi/src/ipmi-locate-acpi-spmi.c,
	libfreeipmi/src/ipmi-locate-defaults.c,
	libfreeipmi/src/ipmi-locate-dmidecode.c,
	libfreeipmi/src/ipmi-locate-pci.c,
	libfreeipmi/src/ipmi-locate-smbios.c: Re-work locate API with
	error code returns.  Use new error logging routines appropriately.
